AG-1786 Reduce severity of z-index fix for material
Now the z-index will be applied only edit time, meaning it won't break
in more conventional scenarios like focus/selection

--- a/src/styles/ag-grid.scss
+++ b/src/styles/ag-grid.scss
@@ -1052,6 +1052,6 @@ $row-group-indent-size: 10px !default;
     }
 }
 
-.ag-row-focus {
+.ag-row-inline-editing {
     z-index: 1;
 }
